# cookiecutter-personal

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  Makefile  README.md  pyproject.toml
{{cookiecutter.project_name}}/.github/actions/setup-python-env/: action.yml
{{cookiecutter.project_name}}/.github/workflows/: main.yml  release.yml
{{cookiecutter.project_name}}/tests/: test_foo.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: foo.py
