[project]
name = "{{cookiecutter.project_name}}"
version = "0.0.1"
description = "{{cookiecutter.project_description}}"
authors = [{ name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.9,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://{{cookiecutter.author_github_handle}}.github.io/{{cookiecutter.project_name}}/"
Repository = "https://github.com/{{cookiecutter.author_github_handle}}/{{cookiecutter.project_name}}"
Documentation = "https://{{cookiecutter.author_github_handle}}.github.io/{{cookiecutter.project_name}}/"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    {% if cookiecutter.deptry == 'y' %}"deptry>=0.22.0",{% endif %}
    "ruff>=0.9.6",
    "pytest-cov>=6.0.0",
    "pyright>=1.1.393",
    "bump-my-version>=0.32.1"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["{{cookiecutter.project_slug}}"]


[tool.bumpversion]
current_version = "0.0.1"
commit = true
message = "Bump Version v{current_version} -> v{new_version}"
tag = true
tag_name = "v{new_version}"
pre_commit_hooks = ["uv lock", "git add uv.lock"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
regex = true
search = "^version = \"{current_version}\""
replace = "version = \"{new_version}\""

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -s -v --durations=0 --cov=testrepo2 --cov-fail-under=50"


[tool.ruff]
target-version = "py312"
line-length = 120
fix = true
lint.select = ["ALL"]
lint.ignore = [
    "D211",
    "D213", # docstring incompatibilities
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "S101", # asserts allowed in tests...
]
"**/__init__.py" = [
    "D104"
]

[tool.pyright]
typeCheckingMode = "standard"
include = ["{{cookiecutter.project_slug}}"]
pythonVersion = "3.12"
reportMissingImports = true
